--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "express": "^4.14.0",
     "gulp": "^3.9.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
